# regex_backend

./: .gitignore  Dockerfile  README.md  regex-backend.cabal  regexp.cabal  test.sh
app/: Main.hs
src/: DFA.hs  DMap.hs  Datatypes.hs  NFA.hs  Parser.hs  RDSL.hs  Regex.hs
test/: Testing.hs
