cabal-version:       2.4
name:                regex-backend
version:             0.1
synopsis:            A minimal regex parser and interpreter.
license:             GPL-3.0-or-later
author:              Michal Spano, Philipp-Immanuel Holst
build-type:          Simple

library regexp
  exposed-modules: Datatypes
                 , DMap
                 , NFA
                 , DFA
                 , RDSL
                 , Regex

  hs-source-dirs:    src
  build-depends: base >=4.14 && <5
               , containers
               , mtl

  default-language:  Haskell2010

executable server
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

  build-depends: base >=4.14 && <5
               , containers
               , mtl
               , regexp
               , scotty
               , text
               , aeson
               , wai-cors
               , http-types

  default-language:  Haskell2010


-- same as before...

executable test
  main-is:           Testing.hs
  hs-source-dirs:    test

  build-depends: base >=4.14 && <5
               , containers
               , mtl
               , regexp
               , regex
               , QuickCheck
               , regex-tdfa

  default-language:  Haskell2010
